Sugerencias, Debounce y mas

--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,23 +1,25 @@
-<h2>Por Capital</h2>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Capital</h2>
 
-<div class="row">
-    <div class="col">
-        <app-pais-input
-            (onEnter)="buscar( $event )"
-            placeholder="Buscar capital"
-        ></app-pais-input>
+    <div class="row">
+        <div class="col">
+            <app-pais-input
+                (onEnter)="buscar( $event )"
+                placeholder="Buscar capital"
+            ></app-pais-input>
+        </div>
     </div>
-</div>
 
-<hr>
-<div
-    *ngIf="hayError"
-    class="alert alert-danger">
-    No se encontró nada con el termino {{ termino }}
-</div>
+    <hr>
+    <div
+        *ngIf="hayError"
+        class="alert alert-danger">
+        No se encontró nada con el termino {{ termino }}
+    </div>
 
-<div *ngIf="!hayError" class="row">
-    <div class="col">
-        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    <div *ngIf="!hayError" class="row">
+        <div class="col">
+            <app-pais-tabla [paises]="paises"></app-pais-tabla>
+        </div>
     </div>
 </div>
